shared file fix, docs
